--- a/static/rime/index.html
+++ b/static/rime/index.html
@@ -25,6 +25,7 @@
     <div id="app"></div>
     <script>
       window.$docsify = {
+        // basePath: 'http://127.0.0.1:5500/rime/',
         basePath: "https://cdn.jsdelivr.net/gh/cxcn/docs/rime/",
         // 加载 _sidebar.md
         loadSidebar: true,
@@ -64,8 +65,7 @@
         },
       };
     </script>
-    <!-- Docsify v4 -->
-    <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify-themeable@0/dist/js/docsify-themeable.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code@2/dist/docsify-copy-code.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify-pagination@2/dist/docsify-pagination.min.js"></script>
