fix gihub action

--- a/static/rime/index.html
+++ b/static/rime/index.html
@@ -59,7 +59,7 @@
           language: 'chinese',
         },
         waline: {
-          serverURL: 'https://docs-waline.vercel.app',
+          serverURL: 'https://waline-cx.vercel.app',
           requiredMeta: ['nick', 'mail'],
           login: 'disable',
         },
