--- a/static/rime/index.html
+++ b/static/rime/index.html
@@ -59,7 +59,7 @@
           language: 'chinese',
         },
         waline: {
-          serverURL: 'https://waline-cx.vercel.app',
+          serverURL: 'https://tcb-6g839arke025d0d9-1300362698.ap-shanghai.app.tcloudbase.com/waline',
           requiredMeta: ['nick', 'mail'],
           login: 'disable',
         },
